--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^5.0.1",
     "ember-qunit": "^3.4.1",
+    "ember-rdfa-helpers": "^0.2.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.8.0",
     "eslint-plugin-ember": "^5.2.0",
