--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-mu-transform-helpers": "^1.1.0",
     "ember-page-title": "^5.0.1",
     "ember-qunit": "^3.4.1",
     "ember-rdfa-helpers": "^0.2.1",
