--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "ember-cli-babel": "^7.1.2",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-display-revisions": "^1.0.1",
+    "ember-cli-deploy-revision-data": "^1.0.0",
+    "ember-cli-deploy-rsync": "0.0.5",
+    "ember-cli-deploy-ssh-index": "^1.0.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
