--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "devDependencies": {
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
-    "@lblod/ember-vo-webuniversum": "^0.20.4",
+    "@lblod/ember-vo-webuniversum": "^0.20.6",
     "@lblod/ember-vo-webuniversum-data-table": "^0.2.11",
     "@lblod/ember-vo-webuniversum-widget": "^0.1.4",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^4.0.1",
+    "ember-basic-dropdown": "^1.1.2",
     "ember-cli": "~3.8.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
@@ -42,6 +43,7 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-release": "^1.0.0-beta.2",
+    "ember-cli-sass": "^10.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
@@ -51,6 +53,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mu-transform-helpers": "^1.1.0",
     "ember-page-title": "^5.0.1",
+    "ember-power-select": "^2.3.2",
     "ember-qunit": "^3.4.1",
     "ember-rdfa-helpers": "^0.2.1",
     "ember-resolver": "^5.0.1",
@@ -58,7 +61,8 @@
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
     "postscribe": "^2.0.8",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.0",
+    "sass": "^1.19.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
