--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ember-data": "~3.8.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
+    "ember-lodash": "^4.19.4",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mu-transform-helpers": "^1.1.0",
     "ember-page-title": "^5.0.1",
