--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
+    "@lblod/ember-rdfa-helpers": "git+https://github.com/lblod/ember-rdfa-helpers.git#v0.4.0",
     "@lblod/ember-vo-webuniversum": "^0.21.3",
     "@lblod/ember-vo-webuniversum-data-table": "^0.2.12",
     "@lblod/ember-vo-webuniversum-widget": "^0.1.5",
@@ -59,7 +60,6 @@
     "ember-page-title": "^5.0.1",
     "ember-power-select": "^2.3.2",
     "ember-qunit": "^4.4.1",
-    "ember-rdfa-helpers": "^0.3.0",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.10.0",
     "eslint-plugin-ember": "^6.2.0",
