--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ember-load-initializers": "^2.0.0",
     "ember-lodash": "^4.19.4",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^7.8.1",
     "ember-mu-transform-helpers": "^1.1.0",
     "ember-page-title": "^5.0.1",
     "ember-power-select": "^2.3.2",
