--- a/package.json
+++ b/package.json
@@ -14,62 +14,71 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test"
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test"
   },
   "devDependencies": {
-    "@ember/jquery": "^1.1.0",
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^1.3.0",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "@lblod/ember-vo-webuniversum": "^0.22.7",
     "@lblod/ember-vo-webuniversum-data-table": "^0.2.15",
     "@lblod/ember-vo-webuniversum-widget": "^0.1.6",
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.5.3",
     "ember-basic-dropdown": "^2.0.5",
-    "ember-cli": "~3.12.0",
+    "ember-cli": "~3.18.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.7.3",
-    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-babel": "^7.19.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-display-revisions": "^1.0.1",
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-rsync": "0.0.5",
     "ember-cli-deploy-ssh-index": "^1.0.0",
-    "ember-cli-eslint": "^5.1.0",
     "ember-cli-fastboot": "^2.1.1",
-    "ember-cli-htmlbars": "^4.0.5",
-    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-htmlbars": "^4.3.1",
+    "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^10.0.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^3.0.0",
-    "ember-data": "~3.12.0",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^2.0.0",
+    "ember-data": "~3.18.0",
+    "ember-export-application-global": "^2.0.1",
+    "ember-fetch": "^8.0.1",
+    "ember-load-initializers": "^2.1.1",
     "ember-lodash": "^4.19.4",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.0",
     "ember-mu-transform-helpers": "^2.0.0",
     "ember-page-title": "^5.0.1",
     "ember-power-select": "^3.0.4",
-    "ember-qunit": "^4.4.1",
+    "ember-qunit": "^4.6.0",
     "ember-rdfa-helpers": "0.4.0",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.12.0",
-    "eslint-plugin-ember": "^7.1.0",
-    "eslint-plugin-node": "^10.0.0",
+    "ember-resolver": "^8.0.0",
+    "ember-source": "~3.18.0",
+    "ember-template-lint": "^2.6.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-ember": "^8.4.0",
+    "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
+    "npm-run-all": "^4.1.5",
     "postscribe": "^2.0.8",
-    "qunit-dom": "^0.9.0",
+    "qunit-dom": "^1.2.0",
     "sass": "^1.19.0"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   }
 }
