--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@appuniversum/appuniversum": "^0.0.13",
+    "@appuniversum/ember-appuniversum": "0.0.29",
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
@@ -31,6 +33,7 @@
     "@lblod/ember-vo-webuniversum-widget": "^0.1.6",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-auto-focus": "^2.0.4",
     "ember-auto-import": "^1.5.3",
     "ember-basic-dropdown": "^2.0.5",
     "ember-cli": "~3.18.0",
@@ -73,7 +76,8 @@
     "npm-run-all": "^4.1.5",
     "postscribe": "^2.0.8",
     "qunit-dom": "^1.2.0",
-    "sass": "^1.19.0"
+    "sass": "^1.19.0",
+    "svgxuse": "^1.2.6"
   },
   "engines": {
     "node": "10.* || >= 12"
