--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@appuniversum/appuniversum": "^0.0.13",
     "@appuniversum/ember-appuniversum": "0.0.29",
     "@ember/optional-features": "^1.3.0",
-    "@glimmer/component": "^1.0.0",  // not in mandaten
-    "@glimmer/tracking": "^1.0.0",  // not in mandaten
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "@lblod/ember-vo-webuniversum": "^0.22.7",
     "@lblod/ember-vo-webuniversum-data-table": "^0.2.15",
     "@lblod/ember-vo-webuniversum-widget": "^0.1.6",
-    "babel-eslint": "^10.1.0",   // not in mandaten
+    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-focus": "^2.0.4",
-    "ember-auto-import": "^1.5.3",   // not in mandaten
+    "ember-auto-import": "^1.5.3",
     "ember-basic-dropdown": "^2.0.5",
     "ember-cli": "~3.18.0",
     "ember-cli-app-version": "^3.2.0",
@@ -56,9 +56,9 @@
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.18.0",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.1",  // not in mandaten
+    "ember-fetch": "^8.0.1",
     "ember-load-initializers": "^2.1.1",
-    "ember-lodash": "^4.19.4",  // not in mandaten
+    "ember-lodash": "^4.19.4",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.0",
     "ember-mu-transform-helpers": "^2.0.0",
@@ -68,8 +68,8 @@
     "ember-rdfa-helpers": "0.4.0",
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.18.0",
-    "ember-template-lint": "^2.6.0", // not in mandaten
-    "eslint": "^6.8.0", // not in mandaten
+    "ember-template-lint": "^2.6.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-ember": "^8.4.0",
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
