--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "ember-page-title": "^5.0.1",
     "ember-power-select": "^4.0.3",
     "ember-qunit": "^4.6.0",
-    "ember-rdfa-helpers": "git://github.com/aatauil/ember-rdfa-helpers",
+    "ember-rdfa-helpers": "^0.5.0",
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.18.0",
     "ember-template-lint": "^2.6.0",
