--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "npm-run-all": "^4.1.5",
     "postscribe": "^2.0.8",
     "qunit-dom": "^1.2.0",
+    "release-it": "^15.4.2",
     "sass": "^1.19.0",
     "svgxuse": "^1.2.6"
   },
